...
                                mediaList.refresh()
                            },
                            expanded = false,
                            onExpandedChange = { expanded: Boolean -> },
                            colors = searchColors.inputFieldColors,
                            leadingIcon = {
                                IconButton(onClick = { onSearchTextChange("") }, Modifier.testTag("search-button")) {
                                    AnimatedVisibility(
                                        searchText.isBlank(),
                                        enter = expandIn(expandFrom = Alignment.Center),
                                        exit = shrinkOut(shrinkTowards = Alignment.Center)
                                    ) {
                                        Icon(
...
                                            IconButtonDefaults.iconButtonColors()
                                        } else {
                                            IconButtonDefaults.filledIconButtonColors()
                                        },
                                        modifier = Modifier.constrainAs(filter) {
                                            end.linkTo(sort.start)
                                        }.testTag("filter-button")
                                    ) {
                                        Icon(
                                            painterResource(R.drawable.button_filter),
                                            stringResource(R.string.filter_media)
                                        )
                                    }
                                    IconButton(
                                        onClick = { sortExpanded = true },
                                        colors = IconButtonDefaults.iconButtonColors(),
                                        modifier = Modifier.constrainAs(sort) {
                                            end.linkTo(parent.end)
                                        }.testTag("sort-button")
                                    ) {
                                        Icon(
                                            painterResource(R.drawable.button_sort),
                                            stringResource(R.string.sort_media)
                                        )
                                    }
                                }
                            },
                            modifier = Modifier.testTag("search-input")
                        )

                    },
                    expanded = false,
                    onExpandedChange = { expanded: Boolean -> },
                    shape = SearchBarDefaults.inputFieldShape,
...
                    top.linkTo(search.bottom)
                })
                {
                    DropdownMenu(
                        expanded = filtersExpanded,
                        onDismissRequest = { filtersExpanded = false },
                        modifier = Modifier.testTag("filter-dropdown")
                    )
                    {
                        AnimatedVisibility(filterValue != -1) {
                            FilterItem(
                                painterResource(R.drawable.button_filter_off),
                                stringResource(R.string.clear_filters)
...
                            mediaList.refresh()
                        }
                    }
                    DropdownMenu(
                        expanded = sortExpanded,
                        onDismissRequest = { sortExpanded = false },
                        modifier = Modifier.testTag("sort-dropdown")
                    )
                    {
                        SortItem(
                            painterResource(R.drawable.label_alphabetical),
                            stringResource(R.string.sort_alpha),
                            if (sortValue == 1) {
...
                    FloatingActionButton(
                        onClick = { addMediaDialog = true },
                        modifier = Modifier.sharedBounds(
                            rememberSharedContentState(key = "add-media"),
                            this@AnimatedVisibility,
                            clipInOverlayDuringTransition = OverlayClip(RoundedCornerShape(16.dp))
                        ).testTag("add-media-button")
                    ) {
                        Icon(painterResource(R.drawable.button_add), "Add Media")
                    }
                }
            }
        }) { paddingValues ->
...
                .padding(paddingValues)
                .fillMaxWidth()
                .fillMaxHeight()
        ) {
            LazyColumn(
                verticalArrangement = Arrangement.spacedBy(2.dp),
                modifier = Modifier.testTag("media-list"))
            {
                if(mediaList.itemCount>0){
                    item {
                        HorizontalDivider()
                    }
                }
...
