...
            targetState = isVisible,
            transitionSpec = { fadeIn() togetherWith fadeOut() },
            label = "MediaEditDetails"
        ) { visible ->
            Box(Modifier.fillMaxSize()) {
                if (visible) {
                    ConstraintLayout(modifier = Modifier.testTag("add-edit-media-dialog")) {
                        val (dialog, scrim) = createRefs()
                        Box(
                            modifier = Modifier
                                .fillMaxSize()
                                .clickable {
                                    keyboardController?.hide()
...
                            TextField(
                                textFieldState,
                                label = { Text(stringResource(R.string.media_name)) },
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .padding(20.dp)
                                    .testTag("media-name-input")
                            )
                            var type by remember { mutableIntStateOf(media.type) }
                            FlowRow(
                                horizontalArrangement = Arrangement.Center,
                                modifier = Modifier
                                    .align(Alignment.CenterHorizontally)
...
                                            Icon(
                                                painterResource(R.drawable.vinyl),
                                                stringResource(R.string.vinyl),
                                                modifier = Modifier.height(20.dp)
                                            )
                                        },
                                        modifier = Modifier.testTag("vinyl-button")
                                    )
                                }
                                Box(Modifier.padding(start = 5.dp, end = 5.dp)) {
                                    InputChip(
                                        onClick = {
                                            type = 1
...
                                            Icon(
                                                painterResource(R.drawable.minidisc),
                                                stringResource(R.string.minidisc),
                                                modifier = Modifier.height(20.dp)
                                            )
                                        },
                                        modifier = Modifier.testTag("minidisc-button")
                                    )
                                }
                            }
                            Row(
                                Modifier
                                    .align(Alignment.End)
...
                            ) {
                                TextButton(
                                    {
                                        keyboardController?.hide()
                                        onDismissRequest()
                                    },
                                    modifier = Modifier.testTag("cancel-button")
                                ) { Text(stringResource(R.string.cancel)) }
                                TextButton(
                                    {
                                        media.name = textFieldState.text.toString()
                                        media.type = type
                                        keyboardController?.hide()
                                        onSave(media)
                                    },
                                    enabled = (type != -1 && !textFieldState.text.toString()
                                        .isEmpty()),
                                    modifier = Modifier.testTag("save-button")
                                ) { Text(stringResource(R.string.save)) }
                            }

                        }
                    }
                }
...
